# american-options-pricing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-binary.yml  build.yml  new-release.yml
app/: .gitignore  package-lock.json  package.json
app/src/: app.ts
app/src/routes/: auth.ts
app/src/services/: options.ts
app/src/utils/: auth.ts
app/src/wss-routes/: options.ts
core/: CMakeLists.txt  aarch64-toolchain.cmake
core/include/: bopm.hpp
core/src/: bopm.cpp  main.cpp
core/tests/: CMakeLists.txt  test_bopm.cpp
